# eecs583_final

./: .gitignore  CMakeLists.txt  README.md  basic_func_call.cpilib  basic_func_call.insecure  build.sh  buildMass.sh  exploit  run.sh
benchmarks/: loop_unroll.cpp  ptr_exploit.cpilib  ptr_exploit.insecure  recursion.cpp  simple_types_loop_invariant.cpp
benchmarks/demos/: simple_types_loop_invariant.cpp  stepanov_vector.cpp
cpi_pass/: CMakeLists.txt  cpi.cpp  cpi.h  cpi_pass.cpp  utils.cpp  utils.h
demos/: README.md  basic.cpp  basic_func_call.cpp  exploit.cpp  ptr_exploit.cpp  return_exploit.cpilib  return_exploit.cpp  return_payload_danger.txt  simple_types_constant_folding.cpp  stepanov_abstraction copy.cpp
final_pass/: CMakeLists.txt  cpi.h  final_pass.cpp  utils.cpp  utils.h
save/: ptr_payload_danger.txt  return_exploit.insecure
src/: cpi.cpp  cpi.h
